<resources>
    <string name="app_name">Lat2_AKB2_10116062_NosaCikalDaputra</string>

    <!--Login Activity-->
    <string name="username"><font size="16">Username</font></string>
    <string name="password"><font size="16">Password</font></string>
    <string name="login">login</string>
    <string name="or">OR</string>
    <string name="facebook">connect with facebook</string>
    <string name="account">doesn\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>

    <!--Register Activity-->
    <string name="username_hint"><font size="16">Username</font></string>
    <string name="email"><font size="16">Email</font></string>
    <string name="phone"><font size="16">Phone Number</font></string>
    <string name="blood"><font size="16">Blood Type</font></string>
    <string name="reshus"><font size="16">Reshus</font></string>
    <string name="password_hint"><font size="16">Password</font></string>
    <string name="re_password"><font size="16">Retype Password</font></string>
    <string name="job"><font size="16">Job</font></string>
    <string name="home_address"><font size="16">Home Address</font></string>
    <string name="location"><font size="16">Default Location</font></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="back">Back</string>
    <string name="radio_on">Radio On</string>
    <string name="radio_off">Radio Off</string>
    <string name="term">Agree with Terms and Conditions</string>

    <!--Almost There Activity-->
    <string name="almost_there">Almost There</string>
    <string name="txt_desc_ad">Thank you for registering with us. One more step, you need to check your email to active account</string>
    <string name="verify">Verify</string>

    <!--Verify your account-->
    <string name="verify_account">Verify your Account</string>
    <string name="verify_desc">We have send verification code to your email</string>
    <string name="send">Send</string>
    <string name="get_code">doesn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="verify_code"><font size="16">enter verification code here…</font></string>


    <!--User Home Activity-->
    <string name="header_user">header_user</string>
    <string name="hamburger_icon">hamburger icon</string>
    <string name="notif_icon">notif icon</string>
    <string name="nama">Nosa Cikal D</string>
    <string name="blood_type">Blood type : B</string>
    <string name="text_blood_give_num">75</string>
    <string name="text_blood_received_num">100</string>
    <string name="text_thanks_num">330</string>
    <string name="text_blood_give">blood give</string>
    <string name="text_blood_received">blood received</string>
    <string name="text_thanks">thanks</string>
    <string name="text_search_donor">Search Donor</string>
    <string name="text_sd_near">Search donor near you</string>
    <string name="text_blood_need">Blood Needed</string>
    <string name="text_bn">4 Users need blood</string>
    <string name="text_message">Message</string>
    <string name="sub_message">5 New Message</string>
    <string name="text_donor_history">Donor History</string>
    <string name="sub_donor_history">5 Gives, 2 Received</string>

</resources>
