<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Register">

    <ScrollView
        android:id="@+id/scroll_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_header"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:contentDescription="@string/back"
                    android:src="@mipmap/ic_header_back" />

                <TextView
                    android:id="@+id/text_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/head"
                android:background="@color/separator" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="26dp"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:textColor="@color/edit_Text"
                android:theme="@style/RegisterEditText"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextUsername"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="26dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp"
                android:textColor="@color/edit_Text"
                android:theme="@style/RegisterEditText"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEmail"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="26dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingBottom="16dp"
                android:textColor="@color/edit_Text"
                android:theme="@style/RegisterEditText"
                tools:ignore="Autofill" />

            <LinearLayout
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPhone"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingLeft="26dp"
                android:paddingRight="26dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/radio_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/radio_on"
                        android:src="@mipmap/ic_register_radio_on"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/text_radio_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="@color/edit_Text"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/radio_off"
                        android:src="@mipmap/ic_register_radio_off"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@color/edit_Text"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="26dp"
                android:paddingRight="26dp">

                <EditText
                    android:id="@+id/editTextBlood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:drawableEnd="@mipmap/ic_arrow_dropdown"
                    android:drawableRight="@mipmap/ic_arrow_dropdown"
                    android:hint="@string/blood"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:textColor="@color/edit_Text"
                    android:theme="@style/RegisterEditText"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/editTextReshus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:drawableEnd="@mipmap/ic_arrow_dropdown"
                    android:drawableRight="@mipmap/ic_arrow_dropdown"
                    android:hint="@string/reshus"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:textColor="@color/edit_Text"
                    android:theme="@style/RegisterEditText"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dropdown"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="26dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:textColor="@color/edit_Text"
                android:theme="@style/RegisterEditText"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="26dp"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:textColor="@color/edit_Text"
                android:theme="@style/RegisterEditText"
                tools:ignore="Autofill" />

            <LinearLayout
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextRePassword"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingLeft="26dp"
                android:paddingRight="26dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/radio_personal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/radio_on"
                        android:src="@mipmap/ic_register_radio_on"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/text_radio_personal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/personal"
                        android:textColor="@color/edit_Text"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/radio_organization"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/radio_off"
                        android:src="@mipmap/ic_register_radio_off"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/text_radio_organization"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/organization"
                        android:textColor="@color/edit_Text"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/editTextJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/role"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="26dp"
                android:drawableEnd="@mipmap/ic_arrow_dropdown"
                android:drawableRight="@mipmap/ic_arrow_dropdown"
                android:hint="@string/job"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:textColor="@color/edit_Text"
                android:theme="@style/RegisterEditText"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextHomeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextJob"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="26dp"
                android:hint="@string/home_address"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:textColor="@color/edit_Text"
                android:theme="@style/RegisterEditText"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextHomeAddress"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="26dp"
                android:drawableEnd="@mipmap/ic_blood_needed_location"
                android:drawableRight="@mipmap/ic_blood_needed_location"
                android:hint="@string/location"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:textColor="@color/edit_Text"
                android:theme="@style/RegisterEditText"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextLocation"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="26dp"
                android:contentDescription="@string/term"
                android:src="@mipmap/ic_register_terms_on" />

            <TextView
                android:id="@+id/text_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextLocation"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/checkbox"
                android:layout_toRightOf="@id/checkbox"
                android:text="@string/term"
                android:textColor="@color/edit_Text"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRegister"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="26dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_register"
                android:text="@string/register"
                android:textColor="@color/light_blue_2" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>