<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".AlmostThere">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="60dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/text_almost_there"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_light"
            android:text="@string/almost_there"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="40sp"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/text_desc_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_almost_there"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/txt_desc_ad"
            android:textAlignment="center"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/background"
            android:textSize="14sp"
            tools:targetApi="jelly_bean" />

        <Button
            android:id="@+id/btnVerify"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_desc_ad"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="54dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/button_style"
            android:text="@string/verify"
            android:textColor="@color/background" />

    </RelativeLayout>

</RelativeLayout>